# ml-ops-assignment

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  INTEL_MAC_GUIDE.md  INTEL_MAC_QUICKREF.md  QUICKSTART.md  README.md  cloudbuild.yaml  demo_logging.py  models.dvc  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: docker-build.yaml  linting.yaml  tests.yaml
configs/experiments/: README.md  default.yaml
data/: processed.dvc
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: LOGGING.md  LOGGING_EXPLAINED.md  mkdocs.yaml
docs/source/: index.md
documents/: INDEX.md  INTEL_MAC_SUMMARY.md  SETUP_COMPLETE.md  checklist.md  project_description.md
reports/: README.md
src/ml_ops_assignment/: api.py  data.py  evaluate.py  logging_config.py  model.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_model.py
wandb/: latest-run
wandb/run-20260122_161329-6vmvyylh/: run-6vmvyylh.wandb
wandb/run-20260122_161329-6vmvyylh/files/: config.yaml  wandb-metadata.json
wandb/run-20260122_162244-v3xmkony/: run-v3xmkony.wandb
wandb/run-20260122_162244-v3xmkony/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
